# LeanReinforcement

./: .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  analyze_coordinate_descent_results.py  analyze_training_depth.py  debug_theorem_loading.py  demo_lean4.py  environment.yaml  environment.yml  evaluate_run.py  gpu_params.json  hyperbolic_feasibility.py  hyperbolic_ppo_v0.py  memory_stress_test.py  mypy.ini  notes.md  plot_benchmark_training.py  plot_training.py  pyproject.toml  tune_gpu_params.py  view_json.js
benchmark/: __init__.py  benchmark_ppo_vs_mcts.py  evaluate_benchmark.py  fast_results.json  plot_benchmark.py  run_benchmark.py
hyperparam_results/: coordinate_descent_final.json  coordinate_descent_intermediate.json  grid_search_intermediate.json  optimal_config.json
job_files/: alphazero_training.job  benchmark.job  curvature_sweep.job  cython.job  debug_training.job  debug_transformer.job  debugging.job  demo.job  demo_agent.job  environment.job  evaluate.job  experiment_conc.job  experiment_replay.job  fix_environment.job  guided_rollout_training.job  guided_rollout_training.sh  index_corpus.job  populate_cache.job  run_experiments.sh  run_hyperparam_search.sh  run_hyperparameter_search.job  run_pipeline.sh  simple_transformer_training.job  simplified_training.job  slurm-22420500.out  test.job  test_mcts.job  test_transformer.job  testing.job  testing_a100.job  trace_repo.job  train.job  train_mcts_euclidean.job  train_mcts_hyperbolic.job  train_ppo_euclidean.job  train_ppo_hyperbolic.job  training_run.job  (+1 more)
(+2549 files in other folders)
